# ilda-decoder

./: .gitignore  .travis.yml  Makefile  README.md  display_ilda.c  ilda-check-liveness.c  ilda-decoder.c  ilda-decoder.h  ilda-display.c  ilda-dump.c  ilda-max-records.c  ilda_decoder.c  ilda_decoder.h  max_records.c  meson.build  test_ilda.c
.github/: bors.toml
.github/workflows/: tests.yml
tests/: compare-output.sh  growing_circle.ild  growing_circle.live12k  growing_circle.live30k  growing_circle.records  meson.build
